--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: cpp
+
 compiler:
   - gcc
   - clang
@@ -8,7 +10,7 @@ before_install:
 install:
   - mkdir build
   - cd build
-  - cmake ../smartit -DINSTALL_TESTS=ON
+  - cmake ../SmartIt -DINSTALL_TESTS=ON
   - make
 
 script:
