--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 install:
   - mkdir build
   - cd build
-  - cmake ../SmartIt -DINSTALL_TESTS=ON
+  - cmake .. -DINSTALL_TESTS=ON
   - make
 
 script:
