--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,15 @@
 language: cpp
 
+os: linux
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-7
+env:
+  - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
 before_install:
   - eval "${MATRIX_EVAL}"
 
@@ -14,19 +24,3 @@ script:
   - ./test/test_containers
   - ./test/test_timing
   - ./test/test_data_object_example
-
-matrix:
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-    - os: osx
-      osx_image: xcode8
-      env:
-        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
