Fix previous commit. Use existing class for pointer with a vector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ if(INSTALL_TESTS)
     file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/test)
     include_directories(include)
     file(GLOB TEST_SOURCES ${PROJECT_SOURCE_DIR}/test/*.cpp)
-    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -msse")
+    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -msse -mfpmath=sse")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
     foreach(testsourcefile ${TEST_SOURCES})
       get_filename_component(testname ${testsourcefile} NAME_WE)
